#8307 Dynamic Matrix with titleLocation: "left" - The title is overlapped (#8315)
* #8307 Dynamic Matrix with titleLocation: "left" - The title is overlapped
Fixes #8307

* #8307 revert formatting

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -383,7 +383,9 @@
 .sd-question--table.sd-element--nested {
   overflow-x: visible;
 }
-
+.sd-question--table .sd-question__header--location--left {
+  z-index: 12;
+}
 .sd-table-wrapper {
   display: flex;
   margin: 0 calc(-1 * var(--sd-base-padding));
