work for the https://github.com/surveyjs/survey-library/issues/8209 (readonly fix)

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -2,6 +2,16 @@
   position: relative;
 }
 
+.sd-question--no-pointer-events {
+
+  .sd-selectbase,
+  .sd-rating {
+    label {
+      pointer-events: none;
+    }
+  }
+}
+
 .sd-element__erbox--above-element {
   margin-bottom: calcSize(1);
 }
