--- a/src/knockout/templates/question-ranking.html
+++ b/src/knockout/templates/question-ranking.html
@@ -2,7 +2,7 @@
    <!-- ko ifnot: question.selectToRankEnabled -->
   <div data-bind="css: question.rootClass">
     <!-- ko foreach: { data: question.rankingChoices, as: 'item', afterRender: question.koAfterRender } -->
-      <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { number: question.getNumberByIndex($index()), componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: question.itemComponent, data: item } } } -->
+      <!-- ko component: { name: question.getItemValueWrapperComponentName(item), params: { number: question.getNumberByIndex($index()), componentData:  question.getItemValueWrapperComponentData(item), templateData: { name: 'survey-ranking-item', data: item } } } -->
       <!-- /ko -->
     <!-- /ko -->
   </div>
@@ -70,7 +70,7 @@
       </div>
         <!-- /ko -->
         <div data-bind="css: question.cssClasses.controlLabel">
-          <!-- ko template: { name: 'survey-string', data: $data.locText } -->
+          <!-- ko template: { name: question.itemComponent, data: $data.locText } -->
           <!-- /ko -->
         </div>
       </div>
