Revert "#8129 apply hovered classes only for dropdown popup"
This reverts commit 0806e0a25a695d2f4590e361cba250aa17bcb580.

--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -82,7 +82,8 @@
   outline: none;
 }
 
-.sv-list__item:focus .sv-list__item-body {
+.sv-list__item:focus .sv-list__item-body,
+.sv-list__item--hovered > .sv-list__item-body {
   background-color: $background-dark;
 }
 
