--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -142,9 +142,11 @@
           &.sd-item--checked .sd-item__decorator {
             background-color: $primary;
           }
+
           &.sd-item--readonly.sd-item--checked .sd-item__decorator {
             background-color: $background;
           }
+
           &.sd-item--preview.sd-item--preview .sd-item__decorator {
             background-color: transparent;
           }
@@ -379,13 +381,16 @@
   position: relative;
   overflow-x: auto;
 }
+
 .sd-question--table.sd-element--collapsed,
 .sd-question--table.sd-element--nested {
   overflow-x: visible;
 }
+
 .sd-question--table .sd-question__header--location--left {
   z-index: 12;
 }
+
 .sd-table-wrapper {
   display: flex;
   margin: 0 calc(-1 * var(--sd-base-padding));
@@ -422,6 +427,7 @@
   .sd-table {
     background-color: $background-dim;
   }
+
   .sd-table-wrapper {
 
     &:before,
@@ -429,7 +435,7 @@
       background-color: $background-dim;
     }
   }
-  
+
   .sd-table__cell--actions:not(.sd-table__cell--vertical):last-child {
     .sd-action-bar {
       background-color: $background-dim;
@@ -445,6 +451,7 @@
     background-color: $background-dim;
   }
 }
+
 .sd-question--table {
 
   &>.sd-question__header,
@@ -587,7 +594,8 @@
       padding-top: calcSize(5);
 
       &::before {
-        top: calcSize(-2);
+        // top: calcSize(-2);
+        background-color: transparent;
       }
     }
   }
@@ -630,6 +638,10 @@
   .sd-table__cell:first-of-type,
   .sd-matrix__cell {
     margin-top: 0;
+  }
+
+  .sd-table__cell--footer:not(.sd-question--answered) {
+    display: none;
   }
 
   .sd-table__cell {
