work for #8320 Email Entry with Maximum Character limit - The input area goes beyound the boundaries

--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -161,6 +161,10 @@ textarea {
   box-sizing: content-box;
   width: calc(100% - 4 * #{$base-unit});
   height: multiply(1.5, $font-editorfont-size);
+
+  &.sd-text__character-counter:focus-within {
+    width: calc(100% - 10 * #{$base-unit});
+  }
 }
 
 .sd-input[type="range"]::-webkit-slider-runnable-track {
