--- a/src/default-styles.scss
+++ b/src/default-styles.scss
@@ -1135,6 +1135,9 @@ sv-popup {
 .sv-dropdown-popup {
   height: 0;
 }
+.sv-popup.sv-popup-inner {
+  height: 0;
+}
 
 .sv-popup__container {
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
