work for the https://github.com/surveyjs/survey-library/issues/8284work for the https://github.com/surveyjs/survey-library/issues/8209

--- a/packages/survey-angular-ui/example/src/app/components/itemContentTemplateComponent.html
+++ b/packages/survey-angular-ui/example/src/app/components/itemContentTemplateComponent.html
@@ -1,4 +1,4 @@
 <div class="sv-ranking-item__text" style="display: flex; align-items: center; gap: 8px;">
   <svg [iconName]="'icon-next_16x16'" [size]="'16'" sv-ng-svg-icon></svg>
-  <sv-ng-string [model]="text"></sv-ng-string>
+  <sv-ng-string [model]="item.locText"></sv-ng-string>
 </div>
