--- a/packages/survey-angular-ui/src/questions/ranking-item-content.component.html
+++ b/packages/survey-angular-ui/src/questions/ranking-item-content.component.html
@@ -1,3 +1,3 @@
 <div [class]="cssClasses.controlLabel">
-  <sv-ng-string [model]="text"></sv-ng-string>
+  <sv-ng-string [model]="item.locText"></sv-ng-string>
 </div>
