--- a/packages/survey-angular-ui/src/questions/ranking-item.component.html
+++ b/packages/survey-angular-ui/src/questions/ranking-item.component.html
@@ -25,7 +25,7 @@
         </svg> 
       </div></ng-template>
 
-      <ng-template [component]="{ name: question.itemContentComponent, data: { text: model.locText, cssClasses: question.cssClasses } }"></ng-template>
+      <ng-template [component]="{ name: question.itemContentComponent, data: { item: model, cssClasses: question.cssClasses } }"></ng-template>
     </div>
   </div>
 </div>
