--- a/src/defaultV2-theme/blocks/sd-progress-toc.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-toc.scss
@@ -59,3 +59,10 @@ $font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-f
 .sd-title+.sv-components-row>.sv-components-column .sv_progress-toc {
   margin-top: 2px;
 }
+
+.sv_progress-toc.sv_progress-toc--sticky {
+  position: sticky;
+  height: auto;
+  overflow-y: auto;
+  top: 0;
+}
