--- a/src/defaultV2-theme/blocks/sd-progress-toc.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-toc.scss
@@ -56,7 +56,7 @@ $font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-f
   }
 }
 
-.sd-title+.sv-components-row>.sv-components-column .sv_progress-toc {
+.sd-title+.sv-components-row>.sv-components-column .sv_progress-toc:not(.sv_progress-toc--mobile) {
   margin-top: 2px;
 }
 
