--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -26,7 +26,11 @@ sv-popup {
   height: 0;
 }
 
-.sv-popup-inner .sv-popup__container {
+.sv-popup-inner > .sv-popup__container {
+  margin-top: calcSize(-1);
+}
+
+.sv-list__item--with-icon .sv-popup-inner > .sv-popup__container {
   margin-top: calcSize(-0.5);
 }
 
