#8298 Invalid progress bar layout with default v2 theme within a Bootstrap 5 based project Fixes #8298

--- a/src/defaultV2-theme/blocks/sd-progress-buttons.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-buttons.scss
@@ -101,6 +101,7 @@
         z-index: -1;
         border: calcSize(0.5) solid transparent;
         border-radius: 50%;
+        box-sizing: content-box;
       }
     }
   }
