--- a/src/common-styles/sv-navigation-toc.scss
+++ b/src/common-styles/sv-navigation-toc.scss
@@ -55,3 +55,14 @@
     background-color: $background-dim;
   }
 }
+
+.sv-title+.sv-components-row>.sv-components-column .sv_progress-toc:not(.sv_progress-toc--mobile) {
+  margin-top: 2px;
+}
+
+.sv_progress-toc.sv_progress-toc--sticky {
+  position: sticky;
+  height: auto;
+  overflow-y: auto;
+  top: 0;
+}
