--- a/packages/survey-angular-ui/src/components/file/file-preview.component.html
+++ b/packages/survey-angular-ui/src/components/file/file-preview.component.html
@@ -2,7 +2,8 @@
     <ng-container *ngIf="question.showPreviewContainer">
         <div [class]="question.cssClasses.fileList || undefined">
             <span *ngFor="let val of question.previewValue; index as index; trackBy: trackFilesFn"
-                [visible]="val && question.isPreviewVisible(index)" [class]="question.cssClasses.previewItem">
+                [visible]="val && question.isPreviewVisible(index)" [class]="question.cssClasses.previewItem"
+                (click)="question.doDownloadFileFromContainer($event)">
                 <div *ngIf="val.name && question.cssClasses.fileSign" [class]="question.cssClasses.fileSign">
                     <a (click)="question.doDownloadFile($event, val)" [attr.href]="val.content | safeUrl"
                         [attr.title]="val.name" [attr.download]="val.name" [style.width]="question.imageWidth">{{
@@ -15,7 +16,7 @@
                     <svg *ngIf="question.defaultImage(val)" [iconName]="question.cssClasses.defaultImageIconId"
                         [partCss]="question.cssClasses.defaultImage" [size]="'auto'" sv-ng-svg-icon></svg>
                     <div *ngIf="val.name && !question.isReadOnly" [class]="question.getRemoveButtonCss()"
-                        (click)="question.doRemoveFile(val)">
+                        (click)="question.doRemoveFile(val, $event)">
                         <span [class]="question.cssClasses.removeFile">{{ question.removeFileCaption }}</span>
                         <svg *ngIf="question.cssClasses.removeFileSvgIconId" [title]="question.removeFileCaption"
                             [partCss]="question.cssClasses.removeFileSvg"
