--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -130,7 +130,7 @@
 }
 
 .sd-file__choose-btn--icon {
-  &>span {
+  & > span {
     display: none;
   }
 }
@@ -194,16 +194,19 @@
   min-height: 100%;
   width: calcSize(12);
   margin: 0;
+  cursor: pointer;
 
   .sd-file__default-image {
     width: calcSize(7);
     height: calcSize(8.5);
   }
-
-  img:hover+.sd-file__remove-file-button,
-  svg:hover+.sd-file__remove-file-button,
-  .sd-file__remove-file-button:hover {
-    opacity: 1;
+  &:hover {
+    .sd-file__remove-file-button {
+      opacity: 1;
+    }
+    .sd-file__sign a {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -236,10 +239,17 @@
   display: block;
   opacity: 0;
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 100%;
+  top: 0;
   transform: translate(-50%, -50%);
   transition: opacity $transition-duration;
+}
+.sd-file__image-wrapper--default-image {
+  .sd-file__remove-file-button {
+    left: 50%;
+    top: 50%;
+    transform: translate(calc(0.5 * 7 * #{$base-unit} - 50% - 1.5px), calc(-0.5 * 8.5 * #{$base-unit} - 50% + 1.5px));
+  }
 }
 
 .sd-file__decorator--error {
@@ -271,10 +281,8 @@
   background: transparent;
 }
 
-.sd-file--single {
-  img:hover+.sd-file__remove-file-button {
-    display: none;
-  }
+.sd-file--single .sd-file__preview-item .sd-file__remove-file-button {
+  display: none;
 }
 
 .sd-file--single-image {
@@ -329,12 +337,11 @@
   background: transparent;
 }
 
-.sd-file>input:focus+.sd-file__decorator .sd-file__choose-btn {
+.sd-file > input:focus + .sd-file__decorator .sd-file__choose-btn {
   &.sd-file__choose-btn--icon {
     use {
       fill: $primary;
     }
-
   }
 
   &:not(.sd-file__choose-btn--icon) {
