--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -215,6 +215,7 @@ sv-popup {
   display: flex;
   flex-direction: column;
   min-height: 0;
+  position: relative;
 }
 
 .sv-popup--show-pointer.sv-popup--top {
