Resolved #7033 - Support sticky positioning for the Table of Contents and do not scroll it with a main survey content - Fixed styles for Angular

--- a/src/common-styles/sv-navigation-toc.scss
+++ b/src/common-styles/sv-navigation-toc.scss
@@ -56,8 +56,11 @@
   }
 }
 
-.sv-title+.sv-components-row>.sv-components-column .sv_progress-toc:not(.sv_progress-toc--mobile) {
-  margin-top: 2px;
+.sd-title+.sv-components-row,
+.sd-title~.sv-components-row {
+  &>.sv-components-column .sv_progress-toc:not(.sv_progress-toc--mobile) {
+    margin-top: 2px;
+  }
 }
 
 .sv_progress-toc.sv_progress-toc--sticky {
