PR: Ranking - Support the `itemComponent` setting and allow developers to create a custom item template (#8306)
* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284work for the https://github.com/surveyjs/survey-library/issues/8209

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

* work for the https://github.com/surveyjs/survey-library/issues/8284

--- a/packages/survey-angular-ui/src/questions/ranking-item.component.html
+++ b/packages/survey-angular-ui/src/questions/ranking-item.component.html
@@ -24,9 +24,8 @@
           <use [attr.xlink:href]="question.dashSvgIcon"></use>
         </svg> 
       </div></ng-template>
-      <div [class]="question.cssClasses.controlLabel">
-        <sv-ng-string [model]="model.locText"></sv-ng-string>
-      </div>
+
+      <ng-template [component]="{ name: question.itemContentComponent, data: { item: model, cssClasses: question.cssClasses } }"></ng-template>
     </div>
   </div>
 </div>
