Fix Message Box. Weird gradient background under the button (#8340)
* resolve https://github.com/surveyjs/service/issues/2041
Fix Message Box. Weird gradient background under the button

* rollback

---------

Co-authored-by: OlgaLarina <olga.larina.dev@gmail.com>

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -86,6 +86,9 @@ sv-popup {
     padding-bottom: 2px;
   }
 }
+.sv-popup--modal .sv-popup__body-footer .sv-footer-action-bar {
+  overflow: visible;
+}
 
 .sv-popup--confirm-delete {
   .sv-popup__shadow {
