--- a/src/knockout/templates/questiontitle.html
+++ b/src/knockout/templates/questiontitle.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="survey-question-title">
-  <div data-bind="css: question.cssHeader, click: function(m, e) { if(question.clickTitleFunction) return question.clickTitleFunction(e); }">
+  <div data-bind="css: question.cssHeader, style: { width: $data.titleWidth }, click: function(m, e) { if(question.clickTitleFunction) return question.clickTitleFunction(e); }">
     <!-- ko component: { name: 'survey-element-title', params: { element: $data } } --><!-- /ko -->
     <!-- ko if: $data.hasDescriptionUnderTitle -->
     <div data-bind="css: $data.cssDescription, visible: $data.hasDescription, attr: {'id': $data.ariaDescriptionId}">
