Resolved #8356 - 'Freeze the progress bar' option or make it a default behavior

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -117,3 +117,15 @@ body {
 .sv-popup .sv-popup__scrolling-content {
   @include scrollRules;
 }
+
+@mixin stickyHeader {
+  position: sticky;
+  top: 0;
+  z-index: 15;
+  background-color: $background-dim;
+  box-shadow: $shadow-medium, $shadow-small;
+}
+
+.sv-components-container-center {
+  @include stickyHeader;
+}
