--- a/packages/survey-angular-ui/src/components-container.component.html
+++ b/packages/survey-angular-ui/src/components-container.component.html
@@ -1,6 +1,6 @@
 <ng-template #template>
   <ng-container *ngIf="isNeedRenderWrapper">
-    <div *ngIf="components.length > 0" class="sv-components-column">
+    <div *ngIf="components.length > 0" [class]="'sv-components-column' + ' sv-components-container-' + container">
       <ng-container *ngFor="let component of components">
         <ng-template [component]="{ name: component.component, data: { survey: survey, container: container, model: component.data } }"></ng-template>
       </ng-container>
