work for the https://github.com/surveyjs/survey-library/issues/8389

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -88,6 +88,7 @@
 .sd-input.sd-dropdown:focus-within {
   box-shadow: $shadow-inner-reset, 0 0 0 2px $primary;
 }
+
 .sd-input.sd-dropdown.sd-input--readonly {
   box-shadow: none;
   transition: none;
@@ -119,6 +120,12 @@
 
 .sd-dropdown--empty:not(.sd-input--disabled) .sd-dropdown__filter-string-input::placeholder {
   color: $font-editorfont-placeholdercolor;
+}
+
+.sd-dropdown--empty {
+  div {
+    min-height: multiply(1.5, $font-editorfont-size);
+  }
 }
 
 .sd-dropdown__filter-string-input::placeholder {
@@ -166,6 +173,7 @@
 .sd-question--preview .sd-dropdown_chevron-button {
   display: none;
 }
+
 .sv-dropdown-popup {
   .sd-list__item-body {
     @include useEditorFontSize;
