--- a/src/modern.m600.scss
+++ b/src/modern.m600.scss
@@ -38,15 +38,8 @@
 
               table.sv-matrixdropdown,
               table.sv-matrixdynamic {
-                td {
-                  &:before {
-                    content: attr(data-responsive-title);
-                  }
-                }
-                .sv-table__cell--row-text {
-                  &:before {
-                    content: none;
-                  }
+                .sv-table__responsive-title {
+                  display: block;
                 }
               }
 
