Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - show header bottom shadow only if header is on top and sticky

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -123,9 +123,14 @@ body {
   top: 0;
   z-index: 15;
   background-color: $background-dim;
-  box-shadow: $shadow-medium, $shadow-small;
 }
 
 .sv-components-container-center {
   @include stickyHeader;
+}
+
+.sv-root--sticky-top {
+  .sv-components-container-center {
+    box-shadow: $shadow-medium, $shadow-small;
+  }
 }
