work for the https://github.com/surveyjs/survey-library/issues/8416

--- a/src/knockout/templates/question-ranking.html
+++ b/src/knockout/templates/question-ranking.html
@@ -70,7 +70,7 @@
         </div>
         <!-- /ko -->
 
-        <!-- ko component: { name: question.itemContentComponent, params: { cssClasses: question.cssClasses, item: $data } } -->
+        <!-- ko component: { name: question.itemComponent, params: { cssClasses: question.cssClasses, item: $data } } -->
         <!-- /ko -->
       </div>
     </div>
