work for the https://github.com/surveyjs/survey-library/issues/8416

--- a/packages/survey-angular-ui/src/questions/ranking-item.component.html
+++ b/packages/survey-angular-ui/src/questions/ranking-item.component.html
@@ -25,7 +25,7 @@
         </svg> 
       </div></ng-template>
 
-      <ng-template [component]="{ name: question.itemContentComponent, data: { item: model, cssClasses: question.cssClasses } }"></ng-template>
+      <ng-template [component]="{ name: question.itemContent, data: { item: model, cssClasses: question.cssClasses } }"></ng-template>
     </div>
   </div>
 </div>
