#8344 Focus-frame is cut off (#8424)
* #8344 Focus-frame is cut off
Fixes #8344

* #8344 Focus-frame is cut off
Fixes #8344

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -501,6 +501,12 @@
   }
 }
 
+.sd-row--multiple {
+  .sd-question--table.sd-element--nested > .sd-question__content {
+    padding-right: calc(var(--sd-base-padding) + 2px);
+  }
+}
+
 .sd-question--scroll {
   overflow-x: scroll;
 }
