--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -130,6 +130,11 @@ body {
 .sv-root--sticky-top {
   .sv-components-container-center {
     z-index: 15;
+  }
+}
+
+.sv-root--sticky-top.sd-root-modern--pages {
+  .sv-components-container-center {
     background-color: $background-dim;
     box-shadow: $shadow-medium, $shadow-small;
   }
