Fixed unit and markup tests

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -133,7 +133,7 @@ body {
   }
 }
 
-.sv-root--sticky-top.sd-root-modern--pages {
+.sv-root--sticky-top.sd-progress--pages {
   .sv-components-container-center {
     background-color: $background-dim;
     box-shadow: $shadow-medium, $shadow-small;
