--- a/src/defaultV2-theme/blocks/header.scss
+++ b/src/defaultV2-theme/blocks/header.scss
@@ -4,13 +4,40 @@
 }
 
 .sv-header__overlap {
-  margin-bottom: calcSize(-14);
   padding-bottom: calcSize(8);
+
+  &~div {
+
+    .sd-body,
+    .sv-body {
+      margin-top: calcSize(-14);
+    }
+  }
+}
+
+.sd-root-modern--mobile .sv-header__overlap {
+  padding-bottom: calcSize(2);
+
+  &~div {
+
+    .sd-body,
+    .sv-body {
+      margin-top: calcSize(-5);
+    }
+  }
 }
 
 .sv-header__overlap.sv-header__without-background {
   margin-bottom: 0;
   padding-bottom: 0;
+
+  &~div {
+
+    .sd-body,
+    .sv-body {
+      margin-top: 0;
+    }
+  }
 }
 
 .sv-header__without-background {
@@ -19,11 +46,6 @@
   .sv-header__content {
     padding-bottom: 0;
   }
-}
-
-.sd-root-modern--mobile .sv-header__overlap {
-  margin-bottom: calcSize(-5);
-  padding-bottom: calcSize(2);
 }
 
 .sv-header__content {
