--- a/src/knockout/components/rating/rating-item.html
+++ b/src/knockout/components/rating/rating-item.html
@@ -4,7 +4,7 @@
   class="sv-visuallyhidden"
   data-bind="attr: { name: question.questionName, id: question.getInputId(index), value: item.value, readonly: question.isReadOnlyAttr, 'aria-required': question.ariaRequired, 'aria-label': question.ariaLabel, 'aria-invalid': question.ariaInvalid, 'aria-errormessage': question.ariaErrormessage }, checkedValue: item.value, enable: !question.isDisabledAttr, event: { click: function(data, event) { question.setValueFromClick(event.target.value); return true; } }"
   />
-  <span data-bind="css: question.cssClasses.itemText">
+  <span data-bind="css: question.cssClasses.itemText, attr: {'data-text': item.text }">
   <!-- ko template: { name: 'survey-string', data: item.locText } -->
   <!-- /ko -->
   </span>
