Resolved #8356 - 'Freeze the progress bar' option or make it a default behavior (#8387)
* Resolved #8356 - 'Freeze the progress bar' option or make it a default behavior

* Updated etalons

* Bump PR pipeline

* Bump PR pipeline

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - Fixed title bottom line visibility

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - show header bottom shadow only if header is on top and sticky

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - reverted etalons

* Work for #8356 - 'Freeze the progress bar' option or make it a default - fixed missing title bottom border

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - added styles for floating label

* Updated etalons

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - Added VR-tests

* Try to fix mobile layout

* Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - Fixed remarks

* Fixed u-tests

* Fixed lint

* Updated snapshot test

* Updated etalons

* Fixed unit and markup tests

---------

Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -117,3 +117,25 @@ body {
 .sv-popup .sv-popup__scrolling-content {
   @include scrollRules;
 }
+
+@mixin stickyHeader {
+  position: sticky;
+  top: 0;
+}
+
+.sv-components-container-center {
+  @include stickyHeader;
+}
+
+.sv-root--sticky-top {
+  .sv-components-container-center {
+    z-index: 15;
+  }
+}
+
+.sv-root--sticky-top.sd-progress--pages {
+  .sv-components-container-center {
+    background-color: $background-dim;
+    box-shadow: $shadow-medium, $shadow-small;
+  }
+}
