--- a/src/defaultV2-theme/blocks/sd-progress.scss
+++ b/src/defaultV2-theme/blocks/sd-progress.scss
@@ -14,8 +14,9 @@
 .sd-progress__text {
   position: absolute;
   margin-top: calcSize(1);
-  right: calcSize(3);
-  color: $foreground-light;
+  padding: calcSize(1) calcSize(1.5);
+  right: calcSize(1.5);
+  color: $foreground-dim-light;
   font-size: calcFontSize(0.75);
   line-height: calcLineHeight(1);
   font-weight: 600;
@@ -38,4 +39,14 @@
 
 .sd-body__progress--bottom .sd-progress__text {
   margin-top: calcSize(-3.5);
+}
+
+.sv-root--sticky-top {
+  .sd-progress__text {
+    border-radius: calcSize(0.5);
+    color: $foreground-dim;
+    opacity: 0.75;
+    background: $background;
+    box-shadow: $shadow-medium, $shadow-small;
+  }
 }
