--- a/packages/survey-angular-ui/src/components/rating/rating-item.component.html
+++ b/packages/survey-angular-ui/src/components/rating/rating-item.component.html
@@ -5,6 +5,6 @@
       [attr.name]="model.questionName" [attr.id]="model.getInputId(index)" [value]="item.value" [attr.aria-required]="model.ariaRequired" [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid" [attr.aria-errormessage]="model.ariaErrormessage"
       [disabled]="model.isDisabledAttr" [readonly]="model.isReadOnlyAttr" [checked]="model.value === item.value" (click)="onClick($event)"
       />
-      <span [class]="model.cssClasses.itemText" [model]="item.locText" sv-ng-string></span>
+      <span [class]="model.cssClasses.itemText" [attr.data-text]="item.text" [model]="item.locText" sv-ng-string></span>
   </label>
 </ng-template>
