--- a/packages/survey-angular-ui/src/questions/boolean.component.html
+++ b/packages/survey-angular-ui/src/questions/boolean.component.html
@@ -15,7 +15,7 @@
         <span [class]="model.getLabelCss(model.swapOrder)" [model]="model.locLabelLeft" sv-ng-string></span>
       </div>
       <div [class]="model.cssClasses.switch" (click)="model.onSwitchClickModel($event)">
-        <span [class]="model.cssClasses.slider" [style.marginLeft]="model.thumbMargin">
+        <span [class]="model.cssClasses.slider">
             <span *ngIf="model.cssClasses.sliderText && model.isDeterminated" [class]="model.cssClasses.sliderText" [model]="model.getCheckedLabel()" sv-ng-string></span>
         </span>
       </div>
